@@ -21,6 +21,9 @@ New features added
     links to another document without the need of creating a
     label to which a ``:ref:`` could link to.
 
+  - #4: Added a ``:download:`` role that marks a non-document file
+    for inclusion into the HTML output and links to it.
+
   - The ``toctree`` directive now supports a ``:hidden:`` flag,
     which will prevent links from being generated in place of
     the directive -- this allows you to define your document
